--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Phone:</strong></div>
-              <div class="col-sm-8">+707 225 8106</div>
+              <div class="col-sm-8">+7 707 225 8106</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Address:</strong></div>
