--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
         <div class="ml-auto mr-auto">
           <div class="row">
             <div class="col-md-6">
+             
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="https://hsherhann.editorx.io/my-site-2">
                   <figure class="cc-effect"><img src="https://images.pexels.com/photos/4126724/pexels-photo-4126724.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="Image"/>
                     <figcaption>
@@ -301,6 +302,22 @@
 <div class="section" id="experience">
   <div class="container cc-experience">
     <div class="h4 text-center mb-4 title">Work Experience</div>
+    <div class="card">
+      <div class="row">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-experience-header">
+            <p> January 2022 - Present</p>
+            <div class="h5">Documentolog</div>
+          </div>
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">Software QA tester</div>
+            <p>Experience working with truly professionals in the field of information technology</p>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="card">
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
