--- a/index.html
+++ b/index.html
@@ -302,6 +302,28 @@
 <div class="section" id="experience">
   <div class="container cc-experience">
     <div class="h4 text-center mb-4 title">Work Experience</div>
+    
+     <div class="card">
+      <div class="row">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-experience-header">
+            <p> Jule 2022 - Present</p>
+            <div class="h5">EurasianTech</div>
+          </div>
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">Full stack developer</div>
+            <p>Working with PHP, Laravel framework.
+              <br>
+Database: SQL, MySQL. <br>
+Front-end: html/css/Bootstrap/Vue.<br>
+Online work experience, team working, as well as video calls, work plan.y</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    
     <div class="card">
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
