--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="content-center">
           <div class="cc-profile-image"><a href="#"><img src="images/face1.jpg" alt="Image"/></a></div>
           <div class="h2 title">Sherkhan Khanseiit</div>
-          <p class="category text-white">Web Developer, Software Engineer</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="images/resume.pdf" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
+          <p class="category text-white">Web Developer, Software Engineer</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="images/resumeShKh.pdf" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
         </div>
       </div>
       <div class="section">
@@ -85,7 +85,7 @@
             <div class="h4 mt-0 title">Basic Information</div>
             <div class="row">
               <div class="col-sm-4"><strong class="text-uppercase">Age:</strong></div>
-              <div class="col-sm-8">19</div>
+              <div class="col-sm-8">20 </div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Outlook/Email:</strong></div>
