--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="page-header-image" data-parallax="true" style="background-image: url('https://dz2cdn3.dzone.com/storage/article-thumb/8114418-thumb.jpg')"></div>
       <div class="container">
         <div class="content-center">
-          <div class="cc-profile-image"><a href="#"><img src="images/face1.jpg" alt="Image"/></a></div>
+          <div class="cc-profile-image"><a href="#"><img src="images/myPhoto.jpeg" alt="Image"/></a></div>
           <div class="h2 title">Sherkhan Khanseiit</div>
           <p class="category text-white">Web Developer, Software Engineer</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="images/resumeShKh.pdf" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
         </div>
