--- a/index.html
+++ b/index.html
@@ -75,9 +75,8 @@
           <div class="card-body">
             <div class="h4 mt-0 title">About</div>
             <p>Hello! I am Sherkhan Khanseiit. Junior Software Engineer</p>
-            <p>I am a hardworking person with leadership qualities, I am a junior IT specialist, I always try to move on, 
-              I study fast and effectively, as well as a good team of employees. I have the desire and motivation to achieve my goals 
-              in the company. Also I just like to read books and program and extend my time usefully. <a href="" target="_blank"> Learn More</a></p>
+            <p>ighly-motivated Software Engineer with 1+ years experience looking to fill a position as a Software Engineer to use strong problem solving and coding skills to help with your upcoming challenges.
+ <a href="" target="_blank"> Learn More</a></p>
           </div>
         </div>
         <div class="col-lg-6 col-md-12">
@@ -186,26 +185,26 @@
           <div class="row">
             <div class="col-md-6">
              
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="https://hsherhann.editorx.io/my-site-2">
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="http://salty-stream-92522.herokuapp.com/">
                   <figure class="cc-effect"><img src="https://images.pexels.com/photos/4126724/pexels-photo-4126724.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="Image"/>
                     <figcaption>
                       <div class="h4">Recent Project</div>
-                      <p>Web Development</p>
+                      <p>AgZone project</p>
                     </figcaption>
                   </figure></a></div>
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="https://hsherhann.wixsite.com/my-site-7">
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="https://github.com/sherkhan23/DiplomaBaspana">
                   <figure class="cc-effect"><img src="https://images.pexels.com/photos/6476254/pexels-photo-6476254.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="Image"/>
                     <figcaption>
-                      <div class="h4">Startup Project</div>
-                      <p>Web Application</p>
+                      <div class="h4">My diploma Project</div>
+                      <p>Web application</p>
                     </figcaption>
                   </figure></a></div>
             </div>
             <div class="col-md-6">
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="https://github.com/Sherhan187/Book-shop-website">
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="https://jaynproject.herokuapp.com/">
                   <figure class="cc-effect"><img src="https://images.pexels.com/photos/5926382/pexels-photo-5926382.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="Image"/>
                     <figcaption>
-                      <div class="h4">Book shop Web App</div>
+                      <div class="h4">Layout Website</div>
                       <p>Web Development</p>
                     </figcaption>
                   </figure></a></div>
