--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="content-center">
           <div class="cc-profile-image"><a href="#"><img src="images/myPhoto.jpeg" alt="Image"/></a></div>
           <div class="h2 title">Sherkhan Khanseiit</div>
-          <p class="category text-white">Web Developer, Software Engineer</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="images/resumeShKh.pdf" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
+          <p class="category text-white">Web Developer, Software Engineer</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="images/cv.pdf" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
         </div>
       </div>
       <div class="section">
