--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
             <div class="h4 mt-0 title">About</div>
-            <p>Hello! I am Sherkhan Khanseiit. Junior Software Engineer</p>
-            <p>ighly-motivated Software Engineer with 1+ years experience looking to fill a position as a Software Engineer to use strong problem solving and coding skills to help with your upcoming challenges.
+            <p>Hello! I am Sherkhan Khanseiit, Software Engineer and QA tester</p>
+            <p>Highly-motivated Software Engineer with 1+ years experience looking to fill a position as a Software Engineer to use strong problem solving and coding skills to help with your upcoming challenges.
  <a href="" target="_blank"> Learn More</a></p>
           </div>
         </div>
