--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@ Full stack (PHP Laravel/ React and Bootstrap)  </p>
             <div class="h4 mt-0 title">Basic Information</div>
             <div class="row">
               <div class="col-sm-4"><strong class="text-uppercase">Age:</strong></div>
-              <div class="col-sm-8">20 </div>
+              <div class="col-sm-8">20</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Outlook/Email:</strong></div>
-              <div class="col-sm-8"><br>h.sherhann@gmail.com</div>
+              <div class="col-sm-8">h.sherhann@gmail.com</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Phone:</strong></div>
