--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <p>Hello! I am Sherkhan Khanseiit, Software Engineer and QA tester</p>
             <p> Highly-motivated Back-end developer looking to fill a position as a Software
 Engineer to use strong problem solving and coding skills to help with your upcoming challenges.
-Full stack (PHP Laravel/ React and Bootstrap)  </p>
+Full stack (PHP Laravel/ React and Bootstrap)  
         </div>
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
