--- a/index.html
+++ b/index.html
@@ -72,14 +72,48 @@
     <div class="card" data-aos="fade-up" data-aos-offset="10">
       <div class="row">
         <div class="col-lg-6 col-md-12">
+       <div class="section" id="about">
+  <div class="container">
+    <div class="card" data-aos="fade-up" data-aos-offset="10">
+      <div class="row">
+        <div class="col-lg-6 col-md-12">
           <div class="card-body">
             <div class="h4 mt-0 title">About</div>
             <p>Hello! I am Sherkhan Khanseiit, Software Engineer and QA tester</p>
             <p> Highly-motivated Back-end developer looking to fill a position as a Software
-                Engineer to use strong problem solving and coding skills to help with your upcoming challenges.
-                Full stack (PHP Laravel/ React and Bootstrap)  
-            </p>
+              Engineer to use strong problem solving and coding skills to help with your upcoming challenges.
+              Full stack (PHP Laravel/ React and Bootstrap) </p> 
           </div>
+        </div>
+        <div class="col-lg-6 col-md-12">
+          <div class="card-body">
+            <div class="h4 mt-0 title">Basic Information</div>
+            <div class="row">
+              <div class="col-sm-4"><strong class="text-uppercase">Age:</strong></div>
+              <div class="col-sm-8">20</div>
+            </div>
+            <div class="row mt-3">
+              <div class="col-sm-4"><strong class="text-uppercase">Outlook/Email:</strong></div>
+              <div class="col-sm-8">h.sherhann@gmail.com</div>
+            </div>
+            <div class="row mt-3">
+              <div class="col-sm-4"><strong class="text-uppercase">Phone:</strong></div>
+              <div class="col-sm-8">+7 707 225 8106</div>
+            </div>
+            <div class="row mt-3">
+              <div class="col-sm-4"><strong class="text-uppercase">Address:</strong></div>
+              <div class="col-sm-8">Nur-Sultan, Germany: Zwickau</div>
+            </div>
+            <div class="row mt-3">
+              <div class="col-sm-4"><strong class="text-uppercase">Language:</strong></div>
+              <div class="col-sm-8">Kazakh, Russian, English</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
         </div>
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
