--- a/index.html
+++ b/index.html
@@ -5,54 +5,77 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Madimi+One&family=Ojuju:wght@200..800&family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
   <title></title>
+  <style>
+    .custom-btn {
+      display: inline-block;
+      padding: 10px 20px;
+      text-align: center;
+      text-decoration: none;
+      background-color: #343a40; /* dark background color */
+      color: #fff; /* text color */
+      border: 2px solid transparent; /* transparent border */
+      border-radius: 5px; /* rounded corners */
+      transition: background-color 0.3s ease, color 0.3s ease, border-color 0.3s ease; /* smooth transition */
+    }
+
+    .custom-btn:hover {
+      background-color: #fff; /* white background color on hover */
+      color: #343a40; /* text color on hover */
+      border-color: #343a40; /* border color on hover */
+    }
+  </style>
 </head>
 <body style="background: #131313">
 <div class="container-fluid my-5">
   <div class="row">
-    <div class="d-flex justify-content-center" style="font-size: 700%;" >
-      🧑‍💻
+    <div class="d-flex justify-content-center">
+      <img style="width: 18vw; height: 18vw; border-radius: 50%" src="images/f1dc0aabb9247ff1819e839d8fc6e548.jpeg" alt="">
     </div>
   </div>
   <div class="row">
-    <h3 class="d-flex justify-content-center" style="color: #DADADA; font-family: Inter">
-      SHERKHAN KHANSEIIT
-    </h3>
+    <h2 class="d-flex justify-content-center" style="color: #DADADA; font-family: Roboto">
+    Sherkhan Khanseiit 🧑‍💻
+    </h2>
   </div>
   <div class="row">
     <div class="d-flex justify-content-center">
       <div class="d-flex gap-2 mt-2 text-light">
-        <button class="d-inline form-control btn-sm btn btn-outline-success">Fullstack Devloper</button>
-        <button class="d-inline form-control btn-sm btn btn-outline-success">PHP(Laravel) Devloper</button>
+        <button class="d-inline form-control btn-sm btn btn-outline-success m-1">Fullstack Devloper</button>
+        <button class="d-inline form-control btn-sm btn btn-outline-success m-1">PHP(Laravel) Devloper</button>
       </div>
     </div>
   </div>
   <div class="row mt-4">
     <div class="d-flex justify-content-center">
-      <a href="resume.html" class="btn form-control btn-dark" style="width: 40%">
+      <a href="resume.html" class="btn form-control btn-dark custom-btn" style="width: 40%">
         Website
       </a>
     </div>
     <div class="d-flex justify-content-center mt-2">
-      <a href="https://www.linkedin.com/in/sherkhan-khanseiit-b922641b9/" class="btn form-control btn-dark" style="width: 40%">
+      <a href="https://www.linkedin.com/in/sherkhan-khanseiit-b922641b9/" class="btn form-control btn-dark custom-btn" style="width: 40%">
         LinkedIn
       </a>
     </div>
     <div class="d-flex justify-content-center mt-2">
-      <a href="https://github.com/sherkhan23" class="btn form-control btn-dark" style="width: 40%">
+      <a href="https://github.com/sherkhan23" class="btn form-control btn-dark custom-btn" style="width: 40%">
         GitHub
       </a>
     </div>
     <div class="d-flex justify-content-center mt-2">
-      <a href="https://www.instagram.com/exceedlim/" class="btn form-control btn-dark" style="width: 40%">
+      <a href="https://www.instagram.com/exceedlim/" class="btn form-control btn-dark custom-btn" style="width: 40%">
         Instagram
       </a>
     </div>
     <div class="d-flex justify-content-center mt-2">
-      <button class="btn form-control btn-dark" style="width: 40%">YouTube</button>
+      <button class="btn form-control btn-dark custom-btn" style="width: 40%">YouTube</button>
     </div>
   </div>
 </div>
 </body>
 </html>
+
