--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <div class="container-fluid my-5">
   <div class="row">
     <div class="d-flex justify-content-center">
-      <img style="width: 18vw; height: 18vw; border-radius: 50%" src="images/f1dc0aabb9247ff1819e839d8fc6e548.jpeg" alt="">
+      <img style="width: 18vw; height: 18vw; border-radius: 50%" src="images/emojibest_com_AnimatedSticker%20(1).gif" alt="">
     </div>
   </div>
   <div class="row">
