--- a/resume.html
+++ b/resume.html
@@ -85,32 +85,6 @@
                                                         Full stack (PHP Laravel/ React and Bootstrap) </p>
                                                 </div>
                                             </div>
-                                            <div class="col-lg-6 col-md-12">
-                                                <div class="card-body">
-                                                    <div class="h4 mt-0 title">Basic Information</div>
-                                                    <div class="row">
-                                                        <div class="col-sm-4"><strong class="text-uppercase">Age:</strong></div>
-                                                        <div class="col-sm-8">20</div>
-                                                    </div>
-                                                    <div class="row mt-3">
-                                                        <div class="col-sm-4"><strong class="text-uppercase">Outlook/Email:</strong></div>
-                                                        <div class="col-sm-8">h.sherhann@gmail.com</div>
-                                                    </div>
-                                                    <div class="row mt-3">
-                                                        <div class="col-sm-4"><strong class="text-uppercase">Phone:</strong></div>
-                                                        <div class="col-sm-8">+7 707 225 8106</div>
-                                                    </div>
-                                                    <div class="row mt-3">
-                                                        <div class="col-sm-4"><strong class="text-uppercase">Address:</strong></div>
-                                                        <div class="col-sm-8">Nur-Sultan, Germany: Zwickau</div>
-                                                    </div>
-                                                    <div class="row mt-3">
-                                                        <div class="col-sm-4"><strong class="text-uppercase">Language:</strong></div>
-                                                        <div class="col-sm-8">Kazakh, Russian, English</div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -128,11 +102,11 @@
                                 </div>
                                 <div class="row mt-3">
                                     <div class="col-sm-4"><strong class="text-uppercase">Phone:</strong></div>
-                                    <div class="col-sm-8">+7 707 225 8106</div>
+                                    <div class="col-sm-8">***********</div>
                                 </div>
                                 <div class="row mt-3">
                                     <div class="col-sm-4"><strong class="text-uppercase">Address:</strong></div>
-                                    <div class="col-sm-8">Nur-Sultan, Germany: Zwickau</div>
+                                    <div class="col-sm-8">Astana, Germany: Zwickau</div>
                                 </div>
                                 <div class="row mt-3">
                                     <div class="col-sm-4"><strong class="text-uppercase">Language:</strong></div>
@@ -582,11 +556,11 @@
                                 <div class="col-md-6">
                                     <div class="card-body">
                                         <p class="mb-0"><strong>Address </strong></p>
-                                        <p class="pb-2">Nursultan/ hometown Taraz</p>
+                                        <p class="pb-2">Astana/ hometown Taraz</p>
                                         <p class="mb-0"><strong>Phone</strong></p>
-                                        <p class="pb-2">+707 225 8106</p>
+                                        <p class="pb-2">+707********</p>
                                         <p class="mb-0"><strong>Email</strong></p>
-                                        <p>s.khanseit@astanait.edu.kz / h.sherhann@gmail.com</p>
+                                        <p> h.sherhann@gmail.com</p>
                                     </div>
                                 </div>
                             </div>
