--- a/resume.html
+++ b/resume.html
@@ -85,6 +85,7 @@
                                                         Full stack (PHP Laravel/ React and Bootstrap) </p>
                                                 </div>
                                             </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
